--- a/src/views/VProyecto.form
+++ b/src/views/VProyecto.form
@@ -126,13 +126,14 @@
                       </Border>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="6" rowCount="0">
+                      <Table columnCount="7" rowCount="0">
                         <Column editable="false" title="IdComponente" type="java.lang.Integer"/>
                         <Column editable="false" title="Codigo" type="java.lang.String"/>
                         <Column editable="false" title="Descripci&#xf3;n" type="java.lang.String"/>
                         <Column editable="false" title="Cantidad" type="java.lang.Integer"/>
                         <Column editable="false" title="Medida" type="java.lang.String"/>
                         <Column editable="false" title="Medida Calculada" type="java.lang.Float"/>
+                        <Column editable="false" title="Se Calcula por." type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -148,6 +149,11 @@
                           <Renderer/>
                         </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="300" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                           <Title/>
                           <Editor/>
                           <Renderer/>
