cambios en el proyecto

--- a/src/views/VSubComponente.form
+++ b/src/views/VSubComponente.form
@@ -145,7 +145,10 @@
                           <Component id="cbAcabado" min="-2" pref="281" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="txtDescripcion" min="-2" pref="281" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="txtDescripcion" min="-2" pref="281" max="-2" attributes="0"/>
+                          <Component id="ckComponenteEspecial" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace pref="20" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -164,6 +167,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="cbAcabado" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ckComponenteEspecial" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -203,6 +207,14 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtDescripcion">
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
+            </Component>
+            <Component class="javax.swing.JCheckBox" name="ckComponenteEspecial">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Especial"/>
+              </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
