--- a/src/views/VPrincipal.form
+++ b/src/views/VPrincipal.form
@@ -21,7 +21,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nuevo Componente Especial"/>
+                <Property name="text" type="java.lang.String" value="Nuevo Componente Vidrios/Paneles"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
