--- a/src/views/VComponenteEspecial.form
+++ b/src/views/VComponenteEspecial.form
@@ -258,39 +258,15 @@
                       </Border>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="8" rowCount="0">
+                      <Table columnCount="4" rowCount="0">
                         <Column editable="false" title="IdComponente" type="java.lang.Integer"/>
                         <Column editable="false" title="Codigo" type="java.lang.String"/>
                         <Column editable="false" title="Descripci&#xf3;n" type="java.lang.String"/>
-                        <Column editable="true" title="S.Columna 1" type="java.lang.Boolean"/>
-                        <Column editable="true" title="S.Columna 2" type="java.lang.Boolean"/>
-                        <Column editable="true" title="S.Columna 3" type="java.lang.Boolean"/>
-                        <Column editable="true" title="S.Columna 4" type="java.lang.Boolean"/>
-                        <Column editable="true" title="S.Columna 5" type="java.lang.Boolean"/>
+                        <Column editable="true" title="Sel. Cplumnas " type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
