--- a/src/views/VProyecto.form
+++ b/src/views/VProyecto.form
@@ -487,11 +487,12 @@
                                   </Border>
                                 </Property>
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                                  <Table columnCount="5" rowCount="0">
+                                  <Table columnCount="6" rowCount="0">
                                     <Column editable="false" title="IdComponente" type="java.lang.Integer"/>
                                     <Column editable="false" title="Codigo" type="java.lang.String"/>
                                     <Column editable="false" title="Descripci&#xf3;n" type="java.lang.String"/>
-                                    <Column editable="false" title="Medida" type="java.lang.String"/>
+                                    <Column editable="false" title="Altura" type="java.lang.String"/>
+                                    <Column editable="false" title="Anchura" type="java.lang.String"/>
                                     <Column editable="false" title="Cantidad" type="java.lang.Integer"/>
                                   </Table>
                                 </Property>
@@ -508,6 +509,11 @@
                                       <Renderer/>
                                     </Column>
                                     <Column maxWidth="-1" minWidth="-1" prefWidth="300" resizable="false">
+                                      <Title/>
+                                      <Editor/>
+                                      <Renderer/>
+                                    </Column>
+                                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                                       <Title/>
                                       <Editor/>
                                       <Renderer/>
